--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "victor-hugo",
-  "version": "1.0.0",
-  "description": "Victor Hugo is a Hugo boilerplate for creating truly epic websites!",
-  "repository": "netlify/victor-hugo",
+  "name": "craigbaldwin.com",
+  "version": "12.0.0",
+  "description": "Version 12 of the craigbaldwin.com personal site",
+  "repository": "csbrightside/craigbaldwin.com",
+  "author": "Craig Baldwin",
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
+    "build:hugo:preview": "npm run build:hugo -- -D -F",
+    "build:hugo": "hugo -d ../dist -s site -v",
+    "build:preview": "npm run build:webpack && npm run build:hugo:preview",
+    "build:webpack": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
+    "build": "npm run build:webpack && npm run build:hugo",
     "lint": "eslint src",
-    "start": "run-p start:**",
-    "start:hugo": "hugo -d ../dist -s site -vw",
-    "start:webpack": "webpack-dev-server --config webpack.dev.js --hot",
-    "preview": "run-p preview:**",
+    "prebuild": "rimraf dist",
     "preview:hugo": "npm run start:hugo -- -D -F",
     "preview:webpack": "npm run start:webpack",
-    "prebuild": "rimraf dist",
-    "build": "npm run build:webpack && npm run build:hugo",
-    "build:preview": "npm run build:webpack && npm run build:hugo:preview",
-    "build:hugo": "hugo -d ../dist -s site -v",
-    "build:hugo:preview": "npm run build:hugo -- -D -F",
-    "build:webpack": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
+    "preview": "run-p preview:**",
+    "start:hugo": "hugo -d ../dist -s site -vw",
+    "start:webpack": "webpack-dev-server --config webpack.dev.js --hot",
+    "start": "run-p start:**"
   },
-  "author": "",
-  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/register": "^7.0.0",
+    "@we-make-websites/stylelint-config": "^1.0.2",
     "assets-webpack-plugin": "^3.9.7",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.0",
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
-    "eslint": "^6.0.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint": "^6.0.1",
+    "eslint-plugin-shopify": "^29.0.2",
     "exports-loader": "^0.7.0",
     "fancy-log": "^1.3.2",
     "file-loader": "^4.0.0",
@@ -52,6 +53,8 @@
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "stylelint": "^10.1.0",
+    "stylelint-config-prettier": "^5.2.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^2.0.0",
     "webpack": "^4.25.1",
