--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "file-loader": "^4.0.0",
     "hugo-bin": "^0.37.0",
     "imports-loader": "^0.8.0",
+    "mathsass": "^0.10.1",
     "mini-css-extract-plugin": "^0.7.0",
+    "modularscale-sass": "^3.0.8",
     "node-sass": "^4.10.0",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -52,6 +54,7 @@
     "postcss-preset-env": "^6.3.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
+    "sass-mq": "^5.0.1",
     "style-loader": "^0.23.1",
     "stylelint": "^10.1.0",
     "stylelint-config-prettier": "^5.2.0",
