--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "natives": "1.1.6"
   },
   "dependencies": {
-    "body-scroll-lock": "^2.6.4"
+    "body-scroll-lock": "^2.6.4",
+    "countup.js": "^2.0.4"
   }
 }
