--- a/package.json
+++ b/package.json
@@ -6,21 +6,6 @@
   "author": "Craig Baldwin",
   "main": "index.js",
   "license": "MIT",
-  "scripts": {
-    "build:hugo:preview": "npm run build:hugo -- -D -F",
-    "build:hugo": "hugo -d ../dist -s site -v",
-    "build:preview": "npm run build:webpack && npm run build:hugo:preview",
-    "build:webpack": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
-    "build": "npm run build:webpack && npm run build:hugo",
-    "lint": "eslint src",
-    "prebuild": "rimraf dist",
-    "preview:hugo": "npm run start:hugo -- -D -F",
-    "preview:webpack": "npm run start:webpack",
-    "preview": "run-p preview:**",
-    "start:hugo": "hugo -d ../dist -s site -vw",
-    "start:webpack": "webpack-dev-server --config webpack.dev.js --hot",
-    "start": "run-p start:**"
-  },
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
@@ -66,11 +51,27 @@
     "webpack-merge": "^4.1.4",
     "whatwg-fetch": "^3.0.0"
   },
+  "dependencies": {
+    "body-scroll-lock": "^2.6.4",
+    "countup.js": "^2.0.4",
+    "leaflet": "^1.5.1"
+  },
   "resolutions": {
     "natives": "1.1.6"
   },
-  "dependencies": {
-    "body-scroll-lock": "^2.6.4",
-    "countup.js": "^2.0.4"
+  "scripts": {
+    "build:hugo:preview": "npm run build:hugo -- -D -F",
+    "build:hugo": "hugo -d ../dist -s site -v",
+    "build:preview": "npm run build:webpack && npm run build:hugo:preview",
+    "build:webpack": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
+    "build": "npm run build:webpack && npm run build:hugo",
+    "lint": "eslint src",
+    "prebuild": "rimraf dist",
+    "preview:hugo": "npm run start:hugo -- -D -F",
+    "preview:webpack": "npm run start:webpack",
+    "preview": "run-p preview:**",
+    "start:hugo": "hugo -d ../dist -s site -vw",
+    "start:webpack": "webpack-dev-server --config webpack.dev.js --hot",
+    "start": "run-p start:**"
   }
 }
