--- a/site/config.toml
+++ b/site/config.toml
@@ -2,7 +2,7 @@ baseurl = "/"
 languageCode = "en-gb"
 languageLang = "en"
 title = "Craig Baldwin"
-disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
+disableKinds = ["RSS", "taxonomy", "taxonomyTerm", "categories"]
 
 [params]
   siteTitle = "Craig Baldwin [dot] com"
