--- a/site/static/images/favicon/manifest.json
+++ b/site/static/images/favicon/manifest.json
@@ -2,12 +2,12 @@
 	"name": "Craig Baldwin",
 	"icons": [
 		{
-			"src": "\/new\/images\/favicon\/android-chrome-192x192.png",
+			"src": "\/images\/favicon\/android-chrome-192x192.png",
 			"sizes": "192x192",
 			"type": "image\/png"
 		},
 		{
-			"src": "\/new\/images\/favicon\/android-chrome-512x512.png",
+			"src": "\/images\/favicon\/android-chrome-512x512.png",
 			"sizes": "512x512",
 			"type": "image\/png"
 		}
