--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "body-scroll-lock": "^2.6.4",
     "countup.js": "^2.0.4",
+    "instant.page": "^3.0.0",
     "js-cookie": "^2.2.1"
   },
   "resolutions": {
