BUILD: Updated blog article templates

--- a/site/config.toml
+++ b/site/config.toml
@@ -2,7 +2,9 @@ baseurl = "/"
 languageCode = "en-gb"
 languageLang = "en"
 title = "Craig Baldwin"
-disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
+
+[taxonomies]
+  tag = "tags"
 
 [params]
   siteTitle = "Craig Baldwin [dot] com"
