BUILD: Added RSS feed to <head>

--- a/site/config.toml
+++ b/site/config.toml
@@ -3,6 +3,9 @@ languageCode = "en-gb"
 languageLang = "en"
 title = "Craig Baldwin"
 
+[author]
+  name = "Craig Baldwin"
+
 [taxonomies]
   tag = "tags"
 
