CONTENT: Further role updates

--- a/site/config.toml
+++ b/site/config.toml
@@ -11,7 +11,7 @@ title = "Craig Baldwin"
 
 [params]
   siteTitle = "Craig Baldwin [dot] com"
-  tagline = "Front-end developer"
+  tagline = "Development Lead"
 
 [outputFormats]
   [outputFormats.RSS]
