CONTENT: Updated job title in homepage title

--- a/site/config.toml
+++ b/site/config.toml
@@ -11,7 +11,7 @@ title = "Craig Baldwin"
 
 [params]
   siteTitle = "Craig Baldwin [dot] com"
-  tagline = "Development Lead"
+  tagline = "Principal developer at We Make Websites"
 
 [outputFormats]
   [outputFormats.RSS]
